pom update to gen coverage report